[package]
name = "osc7display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.6.0"
eframe = "0.17.0"
ascii = "1.0.0"
tokio = { version = "1.17.0", features = ["full"] }
#![windows_subsystem = "windows"]